# IAL-build

./: .gitignore  README.md  pyproject.toml
conf/gmkpack/sources_filters/: IAL-CY49.txt  IAL.txt
examples/: my_branch.yml  pre-48T2.yml
ia4h_scm/: __init__.py  algos.py  pygmkpack.py  repositories.py  util.py
ia4h_scm/config/: __init__.py  doc_template.tex  pygmkpack.ignore4link  pygmkpack.ignore4populate.CY47T1  pygmkpack.ignore4populate.CY48T1
ial_build/: __init__.py  algos.py  pygmkpack.py
ial_build/config/: pygmkpack.ignore4populate
modulefiles/: belenos.tcl
src/ial_build/: __init__.py  algos.py  bundle.py  config.py  pygmkpack.py  repositories.py  util.py
src/ial_build/config/: __init__.py  pygmkpack.ignore4populate.CY48
src/ial_build/config/gmkpack/dummy_symbols/: CY48.txt
src/ial_build/config/gmkpack/sources_filters/: IAL-CY48T1.txt  IAL.txt  oops.txt
src/ial_build/pygmkpack/: __init__.py  gmkpack.py  pack.py
templates/: contribution_documentation.tex
